button mobile fixed

--- a/La-main-verte/src/Component/Potager/Potager.scss
+++ b/La-main-verte/src/Component/Potager/Potager.scss
@@ -103,7 +103,8 @@ h3 {
   button {
     cursor: pointer;
   color : black;
-  padding: 3rem;
+  padding: 0.6rem;
+  margin: 5px;
   border-radius: 0.5rem;
   font-weight: 600;
   font-size: 0.8rem;                                                                                                                                                                                                                                                                                                                                                
